k8s/apps/podinfo/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: podinfo
  namespace: default
spec:
  parentRefs:
    - name: demo-gateway
      sectionName: podinfo-https
  hostnames:
    - zachb-podinfo.duckdns.org
  rules:
    - backendRefs:
        - name: podinfo
          port: 9898
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: podinfo-redirect-to-https
  namespace: default
spec:
  parentRefs:
    - name: demo-gateway
      sectionName: podinfo-http
  hostnames:
    - zachb-podinfo.duckdns.org
  rules:
    - filters:
        - type: RequestRedirect
          requestRedirect:
            scheme: https
            statusCode: 301
